@@ -170,6 +170,8 @@
     <string name="dialog_title_xdisplay_preference">X: số hiển thị</string>
     <string name="title_xhost_preference">Địa chỉ máy chủ X</string>
     <string name="dialog_title_xhost_preference">X: IP hoặc tên máy chủ</string>
+    <string name="title_xserverxsdl_preference">XServer XSDL</string>
+    <string name="summary_xserverxsdl_preference">Automatically open XServer XSDL</string>
     <string name="fb_preferences">Framebuffer</string>
     <string name="title_fbdisplay_preference">Hiển thị</string>
     <string name="dialog_title_fbdisplay_preference">FB: hiển thị số</string>
