@@ -5,6 +5,7 @@ Changelog (English)
 Added an option to change the chroot directory
 Added unchroot script
 Implemented integration with Android
+Implemented integration with XServer XSDL
 
 1.5.2
 Added support Slackware
@@ -312,6 +313,7 @@ Updated list packages of base system installation
 Добавлена опция изменения chroot директории
 Добавлен скрипт unchroot
 Реализована интеграция с Android
+Реализована интеграция с XServer XSDL
 
 1.5.2
 Добавлена поддержка Slackware
